[package]
name = "ctfker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.1", features = ["ws", "http2", "macros"] }
serde = { version = "1.0.151", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.5", features = ["full"] }
tracing-subscriber = "0.3.16"
