[package]
name = "ctfker"
version = "0.1.0"
edition = "2021"
[[bin]]
name="deployer"
path="src/deployer.rs"
[dependencies]
axum = { version = "0.6.1", features = ["ws", "http2", "macros", "headers"] }
headers = "0.3.8"
once_cell = "1.16.0"
serde = { version = "1.0.151", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.5", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tsu = "1.0.1"
